@@ -7,6 +7,13 @@
 
 
 
+MEDIA TYPE EDITABLE IN CONTENT MANAGER (SERIALS FORCE)
+
+PAGE FILE ANALYZE (PREFIX-SEQ-TYPE-PAGENUMBERS 1-N) NOW WITH PDF SUPPORT
+
+PAGE NUMBER FIX DERIVED FROM FILENAME IF POSSIBLE OTHERWISE RECONSTRUCTED BY
+FILE SORTING INDEX
+
 PAGETYPE NOW DYNAMIC, DERIVED FROM FILENAME PARTS
 
 ADDED PAGETYPE TO OLEF PAGE OBJECTS AS DESIRED
